# input-rec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  buildspec.json
.github/workflows/: build-project.yaml
align-rec/: aligner.py  pyproject.toml
data/locale/: en-US.ini
irec/: Makefile  aligner.py  pyproject.toml
src/: globals.hpp  input_source.cpp  input_source.hpp  main.cpp  obs_source.cpp  obs_source.hpp  utils.cpp  utils.hpp
src/device/: gamepad.cpp  gamepad.hpp  input_device.hpp
src/writer/: csv.cpp  csv.hpp  input_writer.hpp  parquet.cpp  parquet.hpp
