[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "input-rec"
version = "0.1.0"
authors = [
    { name="Loïc Magne", email="loic.magne@outlook.com" },
]
description = "Utilities for recording inputs"
dependencies = [
    "polars>=0.20.31",
    "opencv-python>=4.10.0.82",
    "numpy<2",
    "tqdm>=4.66.4"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.9",
]

[tool.setuptools]
py-modules = ["aligner"]

[project.scripts]
irec = "aligner:cli_main"